# receipt-data-extraction

./: .env.sample  .gitignore  README.md  appspec.yml  buildspec.yaml  pyproject.toml
documentation/: mlops_infra.drawio
preprocess/: constants.py  data_models.py  lambda_function.py  plotting_utils.py  preprocess_new.py  preprocess_sroie.py  preprocess_textract.py
scripts/: deploy.sh
setup/ec2/: base.sh  instance.sh  train_instance.sh  utility_instance.sh
setup/lambda/: preprocess.py  start.py  stop.py
training/: dataloader.py  main.py  mixins.py  model.py  trainer.py
