[tool.poetry]
name = "receipt-data-extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.65.0"
jellyfish = "^1.0.0"
numpy = "^1.25.2"
torch = "2.0.0"
transformers = "^4.31.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
